# daily-report-assistant

./: .gitignore  AGENTS.md  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-desktop-daily-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_add_ai_system_prompt.sql
src-tauri/src/: lib.rs
src-tauri/src/ai/: mod.rs  openai_client.rs  prompt_builder.rs  response_parser.rs
src-tauri/src/commands/: capture.rs  mod.rs  settings.rs  summary.rs  system.rs
src-tauri/src/desktop/: clipboard.rs  hotkey_manager.rs  logging.rs  mod.rs  tray.rs  window_manager.rs
src-tauri/src/domain/: app_settings.rs  daily_report_draft.rs  daily_report_service.rs  error.rs  mod.rs  settings_service.rs  task_entry.rs  task_service.rs
src-tauri/src/scheduling/: mod.rs  reminder_service.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs  settings_repository.rs  task_repository.rs  tests.rs
src/app/: App.tsx
src/components/: AiSettingsForm.tsx  AppShell.tsx  CaptureForm.tsx  ErrorBanner.tsx  ReportActions.tsx  ReportPreview.tsx  SettingsForm.tsx  TaskList.tsx  TaskRowEditor.tsx
src/models/: report.ts  settings.ts  task.ts
src/services/: captureService.ts  settingsService.ts  summaryService.ts  systemService.ts  tauriClient.ts
src/stores/: appStore.ts  (+3 more)
(+21 files in other folders)
